--- a/amazonka-contrib-rds-utils.cabal
+++ b/amazonka-contrib-rds-utils.cabal
@@ -33,6 +33,12 @@ library
     build-depends:      base          >= 4.14.1.0
                     ,   amazonka      >= 1.6.1
                     ,   amazonka-core
+                    ,   amazonka-rds
+                    ,   bytestring
+                    ,   lens
+                    ,   text
+                    ,   time
+                    ,   url
 
     hs-source-dirs:     src
 
@@ -53,3 +59,27 @@ library
                         -optl=-pthread
 
     cc-options:         -static
+
+
+executable generate-db-auth-token
+  hs-source-dirs:   exe
+  main-is:          Main.hs
+
+  other-modules:    Paths_amazonka_contrib_rds_utils
+  default-extensions:
+      OverloadedStrings
+      LambdaCase
+      QuasiQuotes
+  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Werror -fPIC -static -optl=-pthread -threaded -rtsopts "-with-rtsopts=-N -T -I3 -A3M -M1.75G" -feager-blackholing
+  cc-options: -static
+  build-depends:
+      base >=4.12 && <5
+    , bytestring
+    , amazonka
+    , amazonka-contrib-rds-utils
+    , lens
+    , optparse-applicative
+    , text
+  if os(linux)
+  else
+  default-language: Haskell2010
