--- a/amazonka-contrib-rds-utils.cabal
+++ b/amazonka-contrib-rds-utils.cabal
@@ -70,7 +70,7 @@ executable generate-db-auth-token
       OverloadedStrings
       LambdaCase
       QuasiQuotes
-  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Werror -fPIC -static -optl=-pthread -threaded -rtsopts "-with-rtsopts=-N -T -I3 -A3M -M1.75G" -feager-blackholing
+  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Werror -fPIC -static -optl=-pthread -threaded -rtsopts "-with-rtsopts=-N -I3 -M1.75G" -feager-blackholing
   cc-options: -static
   build-depends:
       base >=4.12 && <5
