--- a/amazonka-contrib-rds-utils.cabal
+++ b/amazonka-contrib-rds-utils.cabal
@@ -10,20 +10,22 @@ version:            1.6.1.0
 
 -- A URL where users can report bugs.
 -- bug-reports:
-license:            MPL-2.0
-license-file:       LICENSE
-author:             Maxim Avanov
-maintainer:         maxim.avanov@gmail.com
+license:                MPL-2.0
+license-file:           LICENSE
+author:                 Maxim Avanov
+maintainer:             maxim.avanov@gmail.com
+synopsis:               A Haskell equivalent of "aws rds generate-db-auth-token"
+description:            A Haskell equivalent of "aws rds generate-db-auth-token" CLI utility built on top of "amazonka" library.
+homepage:               https://github.com/avanov/amazonka-contrib-rds-utils
+bug-reports:            https://github.com/avanov/amazonka-contrib-rds-utils/issues
+copyright:              Copyright (c) 2021 Maxim Avanov
+category:               AWS
 
--- A copyright notice.
--- copyright:
--- category:
-extra-source-files:
-    CHANGELOG.md
-    README.md
+extra-source-files:     CHANGELOG.md
+                        README.md
 
 library
-    exposed-modules:  Network.AWS.RDS.Utils
+    exposed-modules:    Network.AWS.RDS.Utils
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -34,11 +36,10 @@ library
                     ,   amazonka      >= 1.6.1
                     ,   amazonka-core
                     ,   amazonka-rds
-                    ,   bytestring
-                    ,   lens
-                    ,   text
-                    ,   time
-                    ,   url
+                    ,   bytestring    >= 0.9
+                    ,   lens          >= 4.4
+                    ,   text          >= 1.1
+                    ,   time          >= 1.11
 
     hs-source-dirs:     src
 
@@ -53,7 +54,6 @@ library
                         -Wincomplete-record-updates
                         -Wincomplete-uni-patterns
                         -Wredundant-constraints
-                        -Werror
                         -fPIC
                         -static
                         -optl=-pthread
@@ -62,23 +62,35 @@ library
 
 
 executable generate-db-auth-token
-  hs-source-dirs:   exe
-  main-is:          Main.hs
+  hs-source-dirs:       exe
+  main-is:              Main.hs
 
-  other-modules:    Paths_amazonka_contrib_rds_utils
-  default-extensions:
-      OverloadedStrings
-      LambdaCase
-      QuasiQuotes
-  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Werror -fPIC -static -optl=-pthread -threaded -rtsopts "-with-rtsopts=-N -I3 -M1.75G" -feager-blackholing
-  cc-options: -static
+  autogen-modules:      Paths_amazonka_contrib_rds_utils
+  other-modules:        Paths_amazonka_contrib_rds_utils
+  default-extensions:   OverloadedStrings
+                        LambdaCase
+                        QuasiQuotes
+
+  ghc-options:          -Wall
+                        -Wcompat
+                        -Wincomplete-record-updates
+                        -Wincomplete-uni-patterns
+                        -Wredundant-constraints
+                        -fPIC
+                        -static
+                        -optl=-pthread
+                        -threaded
+                        -rtsopts "-with-rtsopts=-N -I3 -M1.75G"
+                        -feager-blackholing
+
+  cc-options:           -static
   build-depends:
       base >=4.12 && <5
     , bytestring
     , amazonka
     , amazonka-contrib-rds-utils
     , lens
-    , optparse-applicative
+    , optparse-applicative >= 0.16.1
     , text
   if os(linux)
   else
